pod-security/baseline/disallow-capabilities/.kyverno-test/resource.yaml
---
###### Pods - Bad
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - NET_RAW
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - NET_RAW
            - SETGID
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - NET_RAW
    - name: container02
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - SETGID
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - NET_RAW
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - SETGID
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod05
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
    - name: initcontainer02
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - NET_RAW
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - SETGID
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod06
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - NET_RAW
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - SYS_ADMIN
---
###### Pods - Good
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
    - name: container01
      image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - SETGID
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - DAC_OVERRIDE
    - name: container02
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - SETGID
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
  containers:
    - name: container01
      image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod05
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - DAC_OVERRIDE
  containers:
    - name: container01
      image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod06
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - DAC_OVERRIDE
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - SETGID
---
###### Deployments - Bad
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - NET_RAW
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - NET_RAW
                - SETGID
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - NET_RAW
        - name: container02
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - SETGID
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment04
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
        - name: initcontainer01
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - NET_RAW
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - SETGID
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment05
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
        - name: initcontainer01
          image: dummyimagename
        - name: initcontainer02
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - NET_RAW
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - SETGID
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment06
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
        - name: initcontainer01
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - NET_RAW
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - SYS_ADMIN
---
###### Deployments - Good
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - SETGID
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - DAC_OVERRIDE
        - name: container02
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - SETGID
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment04
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
        - name: initcontainer01
          image: dummyimagename
      containers:
        - name: container01
          image: dummyimagename
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment05
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
        - name: initcontainer01
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - DAC_OVERRIDE
      containers:
        - name: container01
          image: dummyimagename
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment06
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
        - name: initcontainer01
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - DAC_OVERRIDE
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - SETGID
---
###### CronJobs - Bad
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob01
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
            - name: container01
              image: dummyimagename
              securityContext:
                capabilities:
                  add:
                    - NET_RAW
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob02
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
            - name: container01
              image: dummyimagename
              securityContext:
                capabilities:
                  add:
                    - NET_RAW
                    - SETGID
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob03
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
            - name: container01
              image: dummyimagename
              securityContext:
                capabilities:
                  add:
                    - NET_RAW
            - name: container02
              image: dummyimagename
              securityContext:
                capabilities:
                  add:
                    - SETGID
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob04
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
            - name: initcontainer01
              image: dummyimagename
              securityContext:
                capabilities:
                  add:
                    - NET_RAW
          containers:
            - name: container01
              image: dummyimagename
              securityContext:
                capabilities:
                  add:
                    - SETGID
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob05
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
            - name: initcontainer01
              image: dummyimagename
            - name: initcontainer02
              image: dummyimagename
              securityContext:
                capabilities:
                  add:
                    - NET_RAW
          containers:
            - name: container01
              image: dummyimagename
              securityContext:
                capabilities:
                  add:
                    - SETGID
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob06
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
            - name: initcontainer01
              image: dummyimagename
              securityContext:
                capabilities:
                  add:
                    - NET_RAW
          containers:
            - name: container01
              image: dummyimagename
              securityContext:
                capabilities:
                  add:
                    - SYS_ADMIN
---
###### CronJobs - Good
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob01
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
            - name: container01
              image: dummyimagename
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob02
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
            - name: container01
              image: dummyimagename
              securityContext:
                capabilities:
                  add:
                    - SETGID
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob03
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
            - name: container01
              image: dummyimagename
              securityContext:
                capabilities:
                  add:
                    - DAC_OVERRIDE
            - name: container02
              image: dummyimagename
              securityContext:
                capabilities:
                  add:
                    - SETGID
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob04
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
            - name: initcontainer01
              image: dummyimagename
          containers:
            - name: container01
              image: dummyimagename
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob05
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
            - name: initcontainer01
              image: dummyimagename
              securityContext:
                capabilities:
                  add:
                    - DAC_OVERRIDE
          containers:
            - name: container01
              image: dummyimagename
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob06
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
            - name: initcontainer01
              image: dummyimagename
              securityContext:
                capabilities:
                  add:
                    - DAC_OVERRIDE
          containers:
            - name: container01
              image: dummyimagename
              securityContext:
                capabilities:
                  add:
                    - SETGID
