pod-security/baseline/disallow-capabilities/.kyverno-test/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-capabilities
policies:
  - ../disallow-capabilities.yaml
resources:
  - resource.yaml
results:
  - kind: CronJob
    policy: disallow-capabilities
    resources:
      - badcronjob01
      - badcronjob02
      - badcronjob03
      - badcronjob04
      - badcronjob05
      - badcronjob06
    result: fail
    rule: adding-capabilities
  - kind: Deployment
    policy: disallow-capabilities
    resources:
      - baddeployment01
      - baddeployment02
      - baddeployment03
      - baddeployment04
      - baddeployment05
      - baddeployment06
    result: fail
    rule: adding-capabilities
  - kind: Pod
    policy: disallow-capabilities
    resources:
      - badpod01
      - badpod02
      - badpod03
      - badpod04
      - badpod05
      - badpod06
    result: fail
    rule: adding-capabilities
  - kind: CronJob
    policy: disallow-capabilities
    resources:
      - goodcronjob01
      - goodcronjob02
      - goodcronjob03
      - goodcronjob04
      - goodcronjob05
      - goodcronjob06
    result: pass
    rule: adding-capabilities
  - kind: Deployment
    policy: disallow-capabilities
    resources:
      - gooddeployment01
      - gooddeployment02
      - gooddeployment03
      - gooddeployment04
      - gooddeployment05
      - gooddeployment06
    result: pass
    rule: adding-capabilities
  - kind: Pod
    policy: disallow-capabilities
    resources:
      - goodpod01
      - goodpod02
      - goodpod03
      - goodpod04
      - goodpod05
      - goodpod06
    result: pass
    rule: adding-capabilities
